# camera_usb

./: .~lock.摄像机采集程序说明.odt#  CMakeLists.txt  readme
src/: capImage.bak1.cpp  capImage.cpp  capImage2.cpp  capImage640_480.cpp  capImageWithStamp.cpp  readVideoToPng.cpp  readVideoToPng2 (复件).cpp  readVideoToPng2.cpp  timer.cpp
